<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.FormCadastro">
    <LinearLayout
        android:id="@+id/containerHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ajuda_cadastro"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/txtEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_cadastro"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo_cadastro"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_descricao_cadastro"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/blue"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/light_gray"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_edittext_login"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/blue"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/light_gray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Senha"
            android:inputType="numberPassword"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_edittext_login"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btVamosLa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastro"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="15dp"
        android:visibility="visible"
        android:backgroundTint="@color/blue"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_continuar"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="15dp"
        android:backgroundTint="@color/blue"
        android:visibility="gone"
        android:layout_margin="20dp"/>

</LinearLayout>
</ScrollView>